Fix readme file path.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "test-strategy"
 version = "0.1.0"
 authors = ["frozenlib"]
 license = "MIT OR Apache-2.0"
-readme = "../README.md"
+readme = "README.md"
 repository = "https://github.com/frozenlib/test-strategy"
 documentation = "https://docs.rs/test-strategy/"
 keywords = ["macro", "testing", "proptest"]
