--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,6 @@
 {
-  // tasks.json 形式の詳細についての資料は、
-  // https://go.microsoft.com/fwlink/?LinkId=733558 をご覧ください
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
   "version": "2.0.0",
   "tasks": [
     {
