Run tests with minimal versions in ci.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,9 @@ jobs:
         run: cargo test --verbose --no-run
       - name: Run tests
         run: cargo test --verbose
+      - name: Set minimal versions
+        run: cargo +nightly update -Z minimal-versions
+      - name: Build tests (minimal versions)
+        run: cargo test --verbose --no-run
+      - name: Run tests (minimal versions)
+        run: cargo test --verbose
