--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -106,6 +106,8 @@
       "args": [
         "clippy",
         "--all-features",
+        "--tests",
+        "--lib",
         "--",
         "-W",
         "clippy::all"
