--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -122,6 +122,30 @@
     },
     {
       "type": "shell",
+      "label": "cargo clippy nightly",
+      "command": "cargo",
+      "args": [
+        "+nightly",
+        "clippy",
+        "--target-dir",
+        "target/debug-nightly",
+        "--all-features",
+        "--tests",
+        "--lib",
+        "--",
+        "-W",
+        "clippy::all"
+      ],
+      "problemMatcher": [
+        "$rustc"
+      ],
+      "presentation": {
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
+      "type": "shell",
       "label": "cargo fix & fmt",
       "command": "cargo fix && cargo fmt",
       "problemMatcher": [
