Update to syn 2.0.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,23 @@
     },
     {
       "type": "shell",
+      "label": "cargo watch",
+      "command": "wt",
+      "args": [
+        "new-tab",
+        "cargo-watch",
+        "-c",
+        "-x",
+        "test"
+      ],
+      "problemMatcher": [],
+      "presentation": {
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
+      "type": "shell",
       "label": "cargo test",
       "command": "cargo",
       "args": [
