--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "2.0.13", features = ["visit", "full"] }
+syn = { version = "2.0.13", features = ["visit", "full", "extra-traits"] }
 quote = "1.0.26"
 proc-macro2 = "1.0.55"
 structmeta = "0.2.0"
