--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,5 @@ jobs:
       #   run: cargo +nightly clippy --all-features --tests --lib -- -W clippy::all
       #   env:
       #     RUSTFLAGS: -D warnings
+      - name: Check msrv
+        run: cargo hack check --rust-version --workspace --all-targets --ignore-private
