--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,14 @@ name: CI
 on:
   push:
   pull_request:
-  schedule: [cron: "20 5 * * *"]
+  schedule: [cron: "20 10 * * *"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Rustup update stable
         run: rustup update stable
       - name: Show cargo version
@@ -28,21 +28,13 @@ jobs:
         env:
           RUSTFLAGS: -D warnings
       - name: Rustup toolchain install nightly
-        run: rustup toolchain install nightly
-      # - name: Rustup toolchain install nightly
-      #   run: rustup toolchain install nightly -c clippy
+        run: rustup toolchain install nightly --allow-downgrade --profile minimal
       - name: Set minimal versions
-        run: cargo +nightly update -Z minimal-versions
+        run: cargo +nightly update -Z direct-minimal-versions
       - name: Build tests (minimal versions)
-        run: cargo +stable test --verbose --no-run
+        run: cargo test --verbose --no-run
       - name: Run tests (minimal versions)
-        run: cargo +stable test --verbose
-      # - name: Clean
-      #   run: cargo clean
-      # - name: Clippy nightly
-      #   run: cargo +nightly clippy --all-features --tests --lib -- -W clippy::all
-      #   env:
-      #     RUSTFLAGS: -D warnings
+        run: cargo test --verbose
       - uses: taiki-e/install-action@cargo-hack
       - name: Check msrv
         run: cargo hack test --rust-version --workspace --all-targets --ignore-private
