--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ structmeta = "0.3.0"
 proptest = "1.6.0"
 trybuild = "1.0.96"
 tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
+anyhow = "1.0.97"
