Append generated test macro so next test macros are aware of it
This is an attempt to improve capabilities among test macros to avoid
duplicated test runs which is rare to be aware of.

The rationale is simple: procedure of attribute macro see only attributes
following it. Macros next to processing macro will not see generated
macro if it is generated in-place. So, instead of generating test macro
in-place, appending generated test macro will let macros next to processing
macro have chance to react, for example, not generate test macro if there
is already one.

Without the fix, the new test will run twice.

See also tokio-rs/tokio#6497, d-e-s-o/test-log#46, frondeus/test-case#143,
la10736/rstest#291, google/googletest-rust#561, kezhuw/stuck#53.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ proptest = "1.6.0"
 trybuild = "1.0.96"
 tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
 anyhow = "1.0.97"
+googletest = "0.14.0"
