Resolve macro hygiene issue in Arbitrary. (fix #18)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -331,5 +331,22 @@
         "clear": true
       }
     },
+    {
+      "type": "shell",
+      "label": "codegen",
+      "command": "cargo",
+      "args": [
+        "run",
+        "-p",
+        "codegen"
+      ],
+      "problemMatcher": [
+        "$rustc"
+      ],
+      "presentation": {
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
   ]
 }
