--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,15 @@
   // See https://go.microsoft.com/fwlink/?LinkId=733558
   // for the documentation about the tasks.json format
   "version": "2.0.0",
+  "options": {
+    "env": {
+      // "RUST_BACKTRACE": "1",
+    },
+  },
+  "presentation": {
+    "panel": "dedicated",
+    "clear": true,
+  },
   "tasks": [
     {
       "type": "shell",
@@ -219,7 +228,8 @@
     {
       "type": "shell",
       "label": "cargo fix & fmt",
-      "command": "cargo fix --all && cargo clippy --fix --allow-dirty --all && cargo fmt --all",
+      "command": "cargo fix --all-features --all-targets --allow-dirty && cargo clippy --fix --allow-dirty --all-features --all-targets && cargo fmt",
+      "args": [],
       "problemMatcher": [
         "$rustc"
       ],
