Use stable rust toolchain in CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Rustup update stable
-        run: rustup update stable
-      - name: Show cargo version
-        run: cargo --version
+      - run: rustup update stable
+      - run: rustup default stable
+      - run: rustup component add clippy
+      - run: cargo --version
       - name: Build
         run: cargo build --verbose
       - name: Build tests
