--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -298,7 +298,7 @@
     {
       "type": "shell",
       "label": "check msrv",
-      "command": "cargo hack test --rust-version --workspace --all-targets --ignore-private",
+      "command": "cargo hack build --rust-version --workspace --ignore-private",
       "args": [],
       "problemMatcher": [
         "$rustc"
